[workspace]
resolver = "2"
members = [
    "crates/gust",
    "crates/gust-types",
    "crates/gust-manifest",
    "crates/gust-resolver",
    "crates/gust-cache",
    "crates/gust-fetch",
    "crates/gust-build",
    "crates/gust-binary-cache",
    "crates/gust-lockfile",
    "crates/gust-platform",
    "crates/gust-diagnostics",
    "crates/gust-registry",
    "crates/gust-workspace",
    "crates/gust-plugin",
]

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/quantbagel/gust"
keywords = ["swift", "package-manager", "dependency-management", "build-tool"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4"
clap_mangen = "0.2"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Dependency resolution
pubgrub = "0.3"

# Hashing - with rayon for parallel hashing of large files, NEON SIMD on Apple Silicon
blake3 = { version = "1.5", features = ["rayon"] }

# Error handling
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"

# Filesystem
walkdir = "2.4"
memmap2 = "0.9"
ignore = "0.4"
fs4 = "0.7"

# Git
gix = { version = "0.58", default-features = false, features = ["blocking-network-client", "worktree-mutation"] }

# Archive/compression
tar = "0.4"
zstd = "0.13"
flate2 = "1.0"

# Progress/output
indicatif = "0.17"
console = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform
directories = "5.0"
which = "6.0"

# Parallelism
rayon = "1.8"

# Semver
semver = { version = "1.0", features = ["serde"] }

# Crypto
ed25519-dalek = "2.1"

# Testing
tempfile = "3.9"

# Internal crates
gust-types = { path = "crates/gust-types" }
gust-manifest = { path = "crates/gust-manifest" }
gust-resolver = { path = "crates/gust-resolver" }
gust-cache = { path = "crates/gust-cache" }
gust-fetch = { path = "crates/gust-fetch" }
gust-build = { path = "crates/gust-build" }
gust-binary-cache = { path = "crates/gust-binary-cache" }
gust-lockfile = { path = "crates/gust-lockfile" }
gust-platform = { path = "crates/gust-platform" }
gust-diagnostics = { path = "crates/gust-diagnostics" }
gust-registry = { path = "crates/gust-registry" }
gust-workspace = { path = "crates/gust-workspace" }
gust-plugin = { path = "crates/gust-plugin" }
