[package]
name = "gust-binary-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote binary artifact caching for Gust"

[dependencies]
gust-types.workspace = true
gust-cache.workspace = true
blake3.workspace = true
tokio.workspace = true
reqwest.workspace = true
tar.workspace = true
zstd.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
directories.workspace = true
