[package]
name = "gust-lockfile"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lockfile handling for Gust"

[dependencies]
gust-types.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true
