[package]
name = "gust-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PubGrub-based dependency resolution for Gust"

[dependencies]
gust-types.workspace = true
pubgrub.workspace = true
semver.workspace = true
thiserror.workspace = true
