[package]
name = "gust-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace management for Gust package manager"

[dependencies]
gust-types.workspace = true
gust-manifest.workspace = true
gust-resolver.workspace = true
gust-lockfile.workspace = true

# Filesystem
walkdir.workspace = true
ignore.workspace = true

# Serialization
serde.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Glob patterns
glob = "0.3"

[dev-dependencies]
tempfile.workspace = true
